@@ -5,8 +5,8 @@
 extern "C" {
 #endif
 
-#define LIBAVFORMAT_VERSION_INT ((50<<16)+(2<<8)+1)
-#define LIBAVFORMAT_VERSION     50.2.1
+#define LIBAVFORMAT_VERSION_INT ((50<<16)+(3<<8)+0)
+#define LIBAVFORMAT_VERSION     50.3.0
 #define LIBAVFORMAT_BUILD       LIBAVFORMAT_VERSION_INT
 
 #define LIBAVFORMAT_IDENT       "Lavf" AV_STRINGIFY(LIBAVFORMAT_VERSION)
@@ -563,6 +563,9 @@ int ff_adts_init(void);
 
 /* mm.c */
 int mm_init(void);
+
+/* avs.c */
+int avs_init(void);
 
 #include "rtp.h"
 
